# pytorch-demo

./: pyproject.toml
code/: model.ipynb
